<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.eafit.dis.analisisnumerico.MultipleRootsActivity">


    <EditText
        android:id="@+id/expText"
        android:layout_width="283dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/fx"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/exp2Text"
        android:layout_width="283dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/ffx"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="59dp" />

    <EditText
        android:id="@+id/exp3Text"
        android:layout_width="284dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/fffx"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="104dp" />

    <EditText
        android:id="@+id/iterText"
        android:layout_width="285dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/iter"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="147dp" />

    <EditText
        android:id="@+id/tolText"
        android:layout_width="287dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/tol"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="190dp" />

    <EditText
        android:id="@+id/iniValText"
        android:layout_width="285dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/x0"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="233dp" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="290dp"
        android:onClick="onSendClick"
        android:text="@string/send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resultText"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="349dp"
        android:textSize="12dp"
        android:ems="10"
        android:hint="@string/res"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
