<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.eafit.dis.analisisnumerico.SecantActivity">

    <EditText
        android:id="@+id/expText"
        android:layout_width="269dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/fx"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp" />

    <EditText
        android:id="@+id/iterText"
        android:layout_width="271dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/iter"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="74dp" />

    <EditText
        android:id="@+id/tolText"
        android:layout_width="271dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/tol"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="116dp" />

    <EditText
        android:id="@+id/infText"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/xi"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="156dp" />

    <EditText
        android:id="@+id/supText"
        android:layout_width="271dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/xs"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="204dp" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="257dp"
        android:onClick="onSendClick"
        android:text="@string/send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resultText"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="332dp"
        android:textSize="12dp"
        android:ems="10"
        android:hint="@string/res"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
