<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.eafit.dis.analisisnumerico.FixedPointActivity">

    <EditText
        android:id="@+id/expFText"
        android:layout_width="272dp"
        android:layout_height="45dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/fx"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/expGText"
        android:layout_width="269dp"
        android:layout_height="41dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/gx"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/iterExp"
        android:layout_width="269dp"
        android:layout_height="44dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/iter"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tolText"
        android:layout_width="269dp"
        android:layout_height="42dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="181dp"
        android:ems="10"
        android:hint="@string/tol"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/iniValText"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/x0"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="291dp"
        android:onClick="onSendClick"
        android:text="@string/send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resultText"
        android:layout_width="291dp"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="349dp"
        android:textSize="12dp"
        android:ems="10"
        android:hint="@string/res"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
